# crustyclaw

./: .gitignore  CLAUDE.md  Cargo.toml  PRD.md  README.md
.cargo/: config.toml
.claude/plans/: roadmap.md
.config/: nextest.toml
.forgejo/workflows/: ci.yml  release.yml
crates/crustyclaw-cli/: Cargo.toml
crates/crustyclaw-cli/src/: main.rs
crates/crustyclaw-config/: Cargo.toml
crates/crustyclaw-config/src/: lib.rs  policy.rs
crates/crustyclaw-core/: Cargo.toml  build.rs
crates/crustyclaw-core/src/: auth.rs  build_info.rs  daemon.rs  isolation.rs  lib.rs  logging.rs  message.rs  plugin.rs  secrets.rs  security.rs  skill.rs
crates/crustyclaw-core/src/context/: indexer.rs  mod.rs  tools.rs  window.rs
crates/crustyclaw-core/src/ipc/: client.rs  mod.rs  server.rs  types.rs
crates/crustyclaw-core/src/isolation/: apple_vz.rs  credential_proxy.rs  docker.rs  firecracker.rs  linux_ns.rs  mod.rs  noop.rs  trust.rs
crates/crustyclaw-core/src/llm/: anthropic.rs  mod.rs  openai.rs  provider.rs  types.rs
crates/crustyclaw-core/tests/: macro_tests.rs
crates/crustyclaw-macros/: Cargo.toml
crates/crustyclaw-macros/src/: action_hook.rs  action_plugin.rs  lib.rs  redact.rs  secure_zeroize.rs  security_policy.rs  validate.rs
crates/crustyclaw-signal/: Cargo.toml
crates/crustyclaw-signal/src/: adapter.rs  lib.rs  message.rs  rate_limit.rs  service.rs
crates/crustyclaw-test-utils/: Cargo.toml
crates/crustyclaw-test-utils/src/: config.rs  daemon.rs  lib.rs  tracing_setup.rs
crates/crustyclaw-tui/: Cargo.toml
crates/crustyclaw-tui/src/: app.rs  keymap.rs  main.rs
crates/crustyclaw-tui/src/panels/: config.rs  dashboard.rs  logs.rs  messages.rs  mod.rs
docs/: THREAT_MODEL.md  cli.md  configuration.md  extensions.md  features.md  getting-started.md  security.md  tui.md
docs/research/: stripe-minions-docker-sandboxes.md
fuzz/: Cargo.toml  fuzz_config_parser.rs  fuzz_policy_eval.rs
