[package]
name = "crustyclaw-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
crustyclaw-config = { path = "../crates/crustyclaw-config" }

[[bin]]
name = "fuzz_config_parser"
path = "fuzz_config_parser.rs"
doc = false

[[bin]]
name = "fuzz_policy_eval"
path = "fuzz_policy_eval.rs"
doc = false
