[package]
name = "crustyclaw-cli"
description = "CLI control plane for CrustyClaw"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "crustyclaw"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
crustyclaw-core = { workspace = true }
crustyclaw-config = { workspace = true }

[dev-dependencies]
crustyclaw-test-utils = { workspace = true }
test-log = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
