[package]
name = "crustyclaw-config"
description = "Configuration loading, validation, and policy engine for CrustyClaw"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
