[package]
name = "crustyclaw-core"
description = "Daemon runtime, message routing, and skill engine for CrustyClaw"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
crustyclaw-config = { workspace = true }
crustyclaw-macros = { workspace = true }
