[package]
name = "crustyclaw-core"
description = "Daemon runtime, message routing, and skill engine for CrustyClaw"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
tower = { workspace = true }
reqwest = { workspace = true }
crustyclaw-config = { workspace = true }
crustyclaw-macros = { workspace = true }

[dev-dependencies]
crustyclaw-test-utils = { workspace = true }
test-log = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
