[package]
name = "crustyclaw-macros"
description = "Procedural macros (derive and attribute) for CrustyClaw"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
