[package]
name = "crustyclaw-signal"
description = "Signal protocol channel adapter for CrustyClaw"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
crustyclaw-core = { workspace = true }

[dev-dependencies]
crustyclaw-test-utils = { workspace = true }
test-log = { workspace = true }
pretty_assertions = { workspace = true }
