[package]
name = "crustyclaw-test-utils"
description = "Shared test fixtures, builders, and helpers for the CrustyClaw workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
crustyclaw-config = { workspace = true }
crustyclaw-core = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
